# hasban

./: .ghci  .gitignore  .gitpod.yml  README.md  hasban.cabal  stack.yaml  stylish-haskell.yaml
app/: Main.hs
src/: Date.hs  GoalSeek.hs  IRR.hs  InterestFactor.hs  LoanApi.hs  LoanCalculator.hs
test/: SpecTest.hs
